# ComputerVision_experiment

./: README.md
CV实验/: CV实验 (1).ppt  CV实验 (2).ppt  CV实验 (3).ppt  CV实验 (4).ppt  CV实验 (5).ppt  CV实验 (6).ppt  CV实验 (7).ppt  CV实验 (8).ppt
Experiment1/: Gif_To_Mp4.cpp
Experiment2/: CMakeListstxt.txt  slidebar.cpp
Experiment3/: 二维仿射变换.cpp
仿射变换（EXP3)/: E3.docx  体验opencv原生变换.cpp
图像加载和alpha提取(EXP1)/: CMakeLists.txt  Info.txt  alpha合成.cpp  alpha提取.cpp  integrated_code.cpp  load_image.cpp
图像跟踪(EXP5)/: object_dectection.cpp
对比度调整和背景相减（EXP2)/: mask_extract.cpp
高斯滤波&快速均值滤波（EXP4)/: EXP4.cpp
